--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_KEY = 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
+API_KEY = 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
+
+This API key got disabled after I uploaded, We will need a new one
