--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-API_KEY = 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
+OPENAI_API_KEY = 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
 
