--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "openai",
+  "name": "current-project",
   "version": "1.0.0",
-  "description": "",
   "type": "module",
   "main": "index.js",
   "scripts": {
@@ -12,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "openai": "^4.12.4"
-  }
+    "openai": "^4.14.2"
+  },
+  "description": ""
 }
